--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@ html {
 	justify-content: center;
 	padding: 10px;
 }
+.welcomeContent >div{
+  display: flex;
+}
 .signFirstPage {
 	display: flex;
 	align-items: center;
@@ -45,7 +48,8 @@ html {
 	border-radius: 5px;
 	background-color: white;
 	padding: 20px;
-	width: fit-content;
+  width: 70%;
+  height: 70%;
   margin-left: 10px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -56,22 +60,22 @@ html {
 .signInForm {
 	display: flex;
 	align-items: center;
- 
-	flex-direction: column;
+  flex-direction: column;
 }
 
 
 input[type=text] {
-	width: 100%;
+	width: 120%;
 	padding: 12px 20px;
 	margin: 8px 0;
 	display: inline-block;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 18px;
 }
 input[type=password] {
-	width: 100%;
+	width: 120%;
 	padding: 12px 20px;
 	margin: 8px 0;
 	display: inline-block;
@@ -89,8 +93,9 @@ input[type=submit] {
 	padding: 5px;
   border-radius: 12px;
   border-style: none;
-  width: 100%;
+  width: 120%;
   font-size: 16px;
+  height: 40px;
 }
 a {
 	color: green;
