--- a/src/App.css
+++ b/src/App.css
@@ -97,10 +97,16 @@ input[type=submit] {
   font-size: 16px;
   height: 40px;
 }
-a {
+.signUpBtn{
+	background: none!important;
+	border: none;
+	padding: 0!important;
 	color: green;
+	text-decoration: underline;
+	cursor: pointer;
 	font-weight: bold;
 }
+
 label{
   text-align: left;
   display: inline-block;
@@ -108,4 +114,26 @@ label{
 
 input::placeholder{
   font-size: 16px;
+}
+
+.signUpContainer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 5px;
+	background-color: white;
+	padding: 20px;
+  width: 70%;
+  height: 70%;
+  margin-left: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+.signUpContainer:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.signUpForm {
+	display: flex;
+	align-items: center;
+  flex-direction: column;
 }
