--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ html {
 	width: auto;
 	display: grid;
 	grid-template-columns: 60% 40%;
+	grid-template-rows: 100%;
 	background-color: whitesmoke;
   height: 100vh;
   padding: 0;
@@ -87,7 +88,7 @@ input[type=password] {
 h1 {
 	font-weight: 600;
 }
-input[type=submit] {
+.authBtn{
 	background-color: green;
 	color: white;
 	padding: 5px;
@@ -97,6 +98,7 @@ input[type=submit] {
   font-size: 16px;
   height: 40px;
 }
+
 .signUpBtn{
 	background: none!important;
 	border: none;
@@ -105,6 +107,7 @@ input[type=submit] {
 	text-decoration: underline;
 	cursor: pointer;
 	font-weight: bold;
+	font-size: 16px;
 }
 
 label{
@@ -136,4 +139,145 @@ input::placeholder{
 	display: flex;
 	align-items: center;
   flex-direction: column;
+}
+
+.sidenav {
+	height: 100%;
+	width: 250px;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-image: linear-gradient(to bottom right, green, rgba(14,87, 14,0.5));
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
+  }
+  
+  .sidenav a {
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 25px;
+	color: white;
+	display: block;
+	transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+	color: #818181;
+  }
+  .sidenav .closebtn {
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
+  }
+  @media screen and (max-height: 450px) {
+	.sidenav {padding-top: 15px;}
+	.sidenav a {font-size: 18px;}
+  }  
+
+  .myCards{
+	  display: flex;
+	  flex-wrap: wrap;
+	  justify-content: space-evenly;
+	  padding: 50px;
+	
+	  align-items: flex-start;
+	
+  }
+  .myCards >div{
+	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+	width: 20%;
+	height: 100%;
+	padding: 16px;
+	text-align: center;
+	background-color: #e6ffe6;
+	margin: 5px;
+	
+  }
+  .dashboard{
+	  display: grid;
+	  grid-template-columns: 20% 80%;
+	  height: 100vh;
+
+  }
+  .sideBar{
+	  display: flex;
+	  background-color:rgb(237, 250, 238);
+	  flex-direction: column;
+	  justify-content: flex-start;
+	  padding: 10px;
+	 
+  }
+
+  .otherPage{
+	  display: grid;
+	  background-color: white;
+	  grid-template-rows: 20% 80%;
+  }
+  .topBar{
+	background-color:rgb(50, 168, 82);
+	display: flex;
+	padding :5px;
+	justify-content: flex-end;
+  }
+  .shopFloor{
+
+  }
+  .header{
+	background-color: white;
+	width: 100%;
+	padding: 5px;
+	border-radius: 4px;
+	margin: 5px;
+}
+.menu{
+	display: flex;
+	flex-direction: column;
+	margin: 5px;
+	justify-content: center;
+}
+.menuTitle{
+	background-color: black;
+	color: white;
+	padding: 10px;
+	border-radius: 4px;
+	margin: 5px;
+}
+.menuList{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	background-color: white;
+	padding: 10px;
+	border-radius: 4px;
+	margin: 5px;
+	align-items: center;
+	
+}
+.menuList div{
+	margin: 5px;
+	height: 40px;
+	padding: 5px;
+	width: 100%;
+	
+}
+.menuList div:hover{
+	background-color: gainsboro;
+}
+.image{
+	width: 100%;
+	height: 100%;
+}
+.logOutBtn{
+	background-color: rgb(16, 17, 16);
+	color: white;
+	padding: 5px;
+  border-radius: 6px;
+  border-style: none;
+  width: 70px;
+  font-size: 12px;
+  height: 40px;
 }
