Add style to supplier

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,26 @@
-body{
-  margin: 0;
+body {
+	margin: 0;
 }
-html {
-  width: 100%;
-  height: 100%;
-  clip: auto;
-  position: absolute;
-  overflow: hidden;
+:root {
+	--dark-primary-color: #388E3C;
+	--primary-color:#4CAF50;
+	--light-primary-color:#C8E6C9;
+	--accent-color:#8BC34A;
+	--primary-text:#212121;
+	--secondary-text:#757575;
+	--text-icons:#FFFFFF;
+	--divider-color:#BDBDBD;
+
   }
-.App{
-  font-family: Arial, Helvetica, sans-serif;
+html {
+	width: 100%;
+	height: 100%;
+	clip: auto;
+	position: absolute;
+	overflow: hidden;
+}
+.App {
+	font-family: Arial, Helvetica, sans-serif;
 }
 .firstpageContainer {
 	width: auto;
@@ -17,21 +28,21 @@ html {
 	grid-template-columns: 60% 40%;
 	grid-template-rows: 100%;
 	background-color: whitesmoke;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
+	height: 100vh;
+	padding: 0;
+	margin: 0;
 }
 
 .welcome {
-	background-image: linear-gradient(to bottom right, green, rgba(14,87, 14,0.5));
+	background-image: linear-gradient(to bottom right, green, rgba(14, 87, 14, 0.5));
 	color: white;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	padding: 10px;
 }
-.welcomeContent >div{
-  display: flex;
+.welcomeContent > div {
+	display: flex;
 }
 .signFirstPage {
 	display: flex;
@@ -49,32 +60,42 @@ html {
 	border-radius: 5px;
 	background-color: white;
 	padding: 20px;
-  width: 70%;
-  height: 70%;
-  margin-left: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
+	width: 70%;
+	height: 70%;
+	margin-left: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
 }
 .signInContainer:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 .signInForm {
 	display: flex;
 	align-items: center;
-  flex-direction: column;
+	flex-direction: column;
 }
 
-
-input[type=text] {
-	width: 120%;
+.signUpContainer input {
+	width: 80%;
 	padding: 12px 20px;
 	margin: 8px 0;
 	display: inline-block;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-  box-sizing: border-box;
-  font-size: 18px;
+	box-sizing: border-box;
+	font-size: 18px;
 }
+.signInContainer input {
+	width: 80%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-size: 18px;
+}
+
 input[type=password] {
 	width: 120%;
 	padding: 12px 20px;
@@ -88,21 +109,21 @@ input[type=password] {
 h1 {
 	font-weight: 600;
 }
-.authBtn{
+.authBtn {
 	background-color: green;
 	color: white;
 	padding: 5px;
-  border-radius: 12px;
-  border-style: none;
-  width: 120%;
-  font-size: 16px;
-  height: 40px;
+	border-radius: 12px;
+	border-style: none;
+	width: 120%;
+	font-size: 16px;
+	height: 40px;
 }
 
-.signUpBtn{
-	background: none!important;
+.signUpBtn {
+	background: none !important;
 	border: none;
-	padding: 0!important;
+	padding: 0 !important;
 	color: green;
 	text-decoration: underline;
 	cursor: pointer;
@@ -110,13 +131,13 @@ h1 {
 	font-size: 16px;
 }
 
-label{
-  text-align: left;
-  display: inline-block;
+label {
+	text-align: left;
+	display: inline-block;
 }
 
-input::placeholder{
-  font-size: 16px;
+input::placeholder {
+	font-size: 16px;
 }
 
 .signUpContainer {
@@ -126,139 +147,182 @@ input::placeholder{
 	border-radius: 5px;
 	background-color: white;
 	padding: 20px;
-  width: 70%;
-  height: 70%;
-  margin-left: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
+	width: 70%;
+	height: 70%;
+	margin-left: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
 }
 .signUpContainer:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 .signUpForm {
 	display: flex;
 	align-items: center;
-  flex-direction: column;
+	flex-direction: column;
 }
 
+.myCards {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	padding: 50px;
 
-
-  .myCards{
-	  display: flex;
-	  flex-wrap: wrap;
-	  justify-content: space-evenly;
-	  padding: 50px;
-	
-	  align-items: flex-start;
-	
-  }
-  .myCards >div{
+	align-items: flex-start;
+}
+.myCards > div {
 	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+	width: 20%;
+	height: 100%;
+	padding: 16px;
+	text-align: center;
+	background-color:var(--light-primary-color);
+	margin: 5px;
+}
+.dashboard {
+	display: grid;
+	grid-template-columns: 20% 80%;
+	height: 100vh;
+}
+.sideBar {
+	display: flex;
+	background-color: var(--light-primary-color);
+	flex-direction: column;
+	justify-content: flex-start;
+	padding: 10px;
+}
+
+.otherPage {
+	display: grid;
+	background-color: white;
+	grid-template-rows: 10% 90%;
+}
+.topBar {
+	background-color: var(--dark-primary-color);
+	/* background-image: linear-gradient(to bottom right, green, rgba(14, 87, 14, 0.5)); */
+	display: flex;
+	padding: 5px;
+	align-content: center;
+	justify-content: center;
+}
+.shopFloor {
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	padding: 5px;
+}
+.shopFloor i {
+	margin: 10px;
+	color: var(--primary-text);
+}
+.header {
+	display: flex;
+	background-color: var(--primary-color);
+	color: var(--text-icons);
+	width: 90%;
+	padding: 5px;
+	border-radius: 4px;
+	margin: 5px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.header i{
+	color: var(--text-icons);
+	margin: 10px;
+}
+.menu {
+	display: flex;
+	flex-direction: column;
+	margin: 5px;
+	justify-content: center;
+	background-color: var(--primary-color);
+	border-radius: 4px;
+}
+.menuTitle {
+	background-color: var(--dark-primary-color);
+	color: var(--text-icons);
+	padding: 10px;
+	border-radius: 4px;
+	margin: 5px;
+}
+.menuList {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	/* background-color:var(--primary-color); */
+	color: var(--primary-text);
+	padding: 10px;
+	border-radius: 4px;
+	margin: 5px;
+	align-items: center;
+	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+}
+.menuList div {
+	margin: 5px;
+	height: 40px;
+	padding: 5px;
+	width: 100%;
+	border-radius: 4px;
+	background-color: var(--light-primary-color);
+}
+.menuList div:hover {
+	background-color: var(--divider-color);
+}
+.menuList div a {
+	text-decoration: none;
+	color: black;
+}
+.image {
+	width: 100%;
+	height: 100%;
+}
+.logOutBtn {
+	background-color: var(--accent-color);
+	color: white;
+	padding: 5px;
+	border-radius: 6px;
+	border-style: none;
+	width: 70px;
+	font-size: 12px;
+	height: 40px;
+	position: relative;
+	left: 500px;
+}
+
+.supplierList {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	padding: 50px;
+
+	align-items: flex-start;
+	width: 800px;
+}
+.supplierList div {
 	width: 20%;
 	height: 100%;
 	padding: 16px;
 	text-align: center;
 	background-color: #e6ffe6;
 	margin: 5px;
-	
-  }
-  .dashboard{
-	  display: grid;
-	  grid-template-columns: 20% 80%;
-	  height: 100vh;
 
-  }
-  .sideBar{
-	  display: flex;
-	  background-color:whitesmoke;
-	  flex-direction: column;
-	  justify-content: flex-start;
-	  padding: 10px;
-	  box-shadow: 10px 4px 8px 0 rgba(0, 0, 0, 0.2);
-	 
-  }
-
-  .otherPage{
-	  display: grid;
-	  background-color: white;
-	  grid-template-rows: 20% 80%;
-  }
-  .topBar{
-	background-color:rgb(50, 168, 82);
-	display: flex;
-	padding :5px;
-	align-content: center;
-	justify-content: center;
-  }
-  .shopFloor{
-	display: flex;
-	align-content: center;
-	justify-content: center;
-	padding: 5px;
-  }
-  .header{
-	  display: flex;
-	background-color: white;
-	width: 100%;
-	padding: 5px;
 	border-radius: 4px;
-	margin: 5px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.menu{
-	display: flex;
-	flex-direction: column;
-	margin: 5px;
-	justify-content: center;
+.supplierList div:hover {
+	background-color: var(--primary-color);
 }
-.menuTitle{
-	background-color: rgb(82, 79, 72);
-	color: white;
+.addSupplierbtn {
+	margin: 5px;
 	padding: 10px;
+	background-color: var(--accent-color);
 	border-radius: 4px;
-	margin: 5px;
+	border-style: none;
+	color: var(--text-icons);
 }
-.menuList{
+.searchnAdd {
 	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	background-color: white;
-	padding: 10px;
-	border-radius: 4px;
-	margin: 5px;
-	align-items: center;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	justify-content: space-between;
 }
-.menuList div{
-	margin: 5px;
-	height: 40px;
-	padding: 5px;
-	width: 100%;
-	
-}
-.menuList div:hover{
-	background-color: whitesmoke;
-}
-.menuList div a{
-	text-decoration: none;
-	color: black;
-}
-.image{
-	width: 100%;
-	height: 100%;
-}
-.logOutBtn{
-	background-color: rgb(82, 79, 72);
-	color: white;
-	padding: 5px;
-  border-radius: 6px;
-  border-style: none;
-  width: 70px;
-  font-size: 12px;
-  height: 40px;
-  position: relative;
-  left: 300px;
-}
-i{
-	margin:10px;
+.searchnAdd input {
+	width: 350px;
+	height: 20px;
 }
