--- a/src/App.css
+++ b/src/App.css
@@ -356,3 +356,52 @@ input::placeholder {
 	  font-size: 12px;
 	}
   }
+
+  .adminDashboard{
+	  display: flex;
+	  background-color: var(--secondary-text);
+	  padding : 10px;
+	  align-items: center;
+	  justify-content: center;
+  }
+
+  .adminDashboard.side{
+	  width: 40%;
+	  margin: 5px;
+	  padding:5px;
+	  background-color: var(--secondary-text);
+	 
+  }
+  .side div{
+	  width: 250px;
+	  background-color: var(--primary-text);
+	  padding: 5px;
+	  margin: 10px;
+	  text-align: center;
+  }
+  .side h1{
+	  color: var(--accent-color);
+	  text-align: center;
+	  font-size: 48px;
+	  font-weight: 500;
+  
+  }
+.side p{
+	color:var(--light-primary-color);
+	text-align: center;
+  }
+
+  .adminDashboard.main{
+	  width: 60%;
+	  margin:5px;
+	  padding: 5px;
+	  background-color: var(--secondary-text);
+  }
+  .newPackage{
+	  background-color: var(--primary-text);
+	  color: var(--light-primary-color);
+	  border-radius: 4px;
+	border-style: none;
+	padding: 5px;
+	margin: 10px;
+  }
