--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,15 @@ body {
 	--text-icons: #ffffff;
 	--divider-color: #bdbdbd;
 }
+
 html {
-	width: 100%;
+    overflow: hidden;
 	height: 100%;
-	/* clip: auto;
-	position: absolute;
-	overflow: hidden; */
+	/* width: 100%; */
+}
+body {
+	height: 100%;
+    overflow: auto;
 }
 .App {
 	font-family: Arial, Helvetica, sans-serif;
@@ -393,4 +396,31 @@ input::placeholder {
 }
 .main button {
 	float: left;
+}
+
+/* .modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+} */
+
+.modal-main input{
+	width: 80%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+}
+
+.display-block {
+	display: block;
+}
+
+.display-none {
+	display: none;
 }
